# tinyos-legacy

./: .gitignore
broken/experimental/owl/motlle/src/: Makefile.am  README  TODO  alloc.c  alloc.h  avr_machine.c  avrlayout.h  call.c  calloc.h  code.h  compile.c  compile.h  dist-README  dump.c  dump.h  env.c  env.h  fake.c  fmain.c  global.c  global.h  ins.c  ins.h  interpret.c  lexer.h  lexer.l  machine.h  mate_machine.c  mate_machine.h  mcompile.c  memory.c  module.c  motlle.c  mudio.c  mudio.h  mudlle.h  mvalues.h  newdump.c  objenv.c  objenv.h  (+16 more)
broken/experimental/owl/motlle/src/CVS/: Entries  Repository
broken/experimental/owl/motlle/src/doc/: first-mudlle.doc  mudlle-mume.doc
broken/experimental/owl/motlle/src/doc/CVS/: Entries  Repository
broken/experimental/owl/motlle/src/msrc/: cnt5.mud  tt2.mud  tt4.mud  utils.mud
broken/experimental/owl/motlle/src/msrc/CVS/: Entries  Repository
broken/experimental/owl/motlle/src/msrc/compiler/: a68k.mud  gen68k.mud  genx86.mud  lib.mud  m68k.mud  optimise.mud  sc.mud
broken/experimental/owl/motlle/src/msrc/compiler/CVS/: Entries  Repository
broken/experimental/owl/motlle/src/msrc/mate/: c1.mud  mate.mud  mh1.mud  mh2.mud  msg1.mud  msg2.mud  sn1.mud  test.mud  test2.mud  test3.mud  test4.mud
broken/experimental/owl/motlle/src/msrc/mate/CVS/: Entries  Repository
broken/experimental/owl/motlle/src/msrc/mote/: scnt.mud  send.mud
broken/experimental/owl/motlle/src/msrc/mote/CVS/: Entries  Repository
broken/experimental/owl/motlle/src/msrc/query/: bug.mud  common.mud  decayagg.mud  e1.mud  e1a.mud  e1d.mud  e2a.mud  e2d.mud  e3.mud  e3a.mud  e3b.mud  e3c.mud  e3d.mud  ex1.mud  ex2.mud  ex3.mud  localagg.mud  s.mud  s2.mud  s3.mud  simple.mud  spatialagg.mud
broken/experimental/owl/motlle/src/msrc/query/CVS/: Entries  Repository
broken/experimental/owl/motlle/src/msrc/sf/: sf.mud
broken/experimental/owl/motlle/src/msrc/sf/CVS/: Entries  Repository
broken/experimental/owl/motlle/src/msrc/sql/: Makefile  expdecay.mud  lex.mll  parse.mly  sql.mli  sqlgen.ml  syntax
broken/experimental/owl/motlle/src/msrc/sql/CVS/: Entries  Repository
broken/experimental/owl/motlle/src/regression/CVS/: Entries  Repository
broken/experimental/owl/motlle/src/runtime/: basic.c  basic.h  files.c  io.c  mkf  mote.c  prim.pl  runtime.c  runtime.h  string.c  support.c  symbol.c  symbol.h  vector.c
broken/experimental/owl/motlle/src/runtime/CVS/: Entries  Repository
broken/motlle/src/: Bootstrap  Makefile.am  alloc.c  alloc.h  avr_machine.h  avrlayout.h  call.c  code.h  compile.c  compile.h  configure.in  context.h  dump.c  dump.h  env.c  env.h  error.c  global.c  global.h  ins.c  ins.h  install-compiler  interpret.c  interpret.h  lexer.h  lexer.l  machine.h  mcompile.c  mcompile.h  memory.c  memory.h  module.c  motlle-interface.h  motlle.c  mudio.h  mudlle.h  objenv.c  objenv.h  options.h  parser.y  (+16 more)
broken/motlle/src/CVS/: Entries  Repository
broken/motlle/src/doc/: fn-summary.doc
broken/motlle/src/doc/CVS/: Entries  Repository
broken/motlle/src/msrc/: cnt.mud  cnt2.mud  cnt3.mud  cnt4.mud  examine.mud  hh.mud  insns  req.mud  t1.mud  t2.mud  tt1.mud  tt3.mud
broken/motlle/src/msrc/CVS/: Entries  Repository
broken/motlle/src/msrc/compiler/: 68k.mud  bitset.mud  cmc.mud  link.mud  mc.mud  misc.mud  phase2.mud  xc.mud
broken/motlle/src/msrc/compiler/CVS/: Entries  Repository
broken/motlle/src/msrc/mote/: recv.mud  work.mud
broken/motlle/src/msrc/mote/CVS/: Entries  Repository
broken/motlle/src/regression/CVS/: Entries  Repository
broken/motlle/src/runtime/: avrprim.pl  basic.c  debug.c  files.c  io.c  mote.h  runtime.c  runtime.h  string.c  stringops.h  support.c  xmkf
broken/motlle/src/runtime/CVS/: Entries  Repository
broken/motlle/src/tests/: align1.c  code.c  fnptr.c  fnptr.s  gc1.mud  varargs.c  varargs.s
broken/motlle/src/tests/CVS/: Entries  Repository
tinyos-1.x/contrib/boomerang/tinyos-1.x/tos/lib/VM/: configure.ac
tinyos-1.x/contrib/boomerang/tinyos-1.x/tos/lib/VM/CVS/: Entries  Repository
tinyos-1.x/contrib/boomerang/tinyos-1.x/tos/lib/VM/components/: AMFilter.nc  AMPromiscuous.nc  ContextControl.nc  ContextControlM.nc  GenericComm.nc  GenericCommPromiscuous.nc  MBuffer.nc  MBufferProxy.nc  MContextSynch.nc  MHandlerStore.nc  MHandlerStoreCommit.nc  MHandlerStoreProxy.nc  MHandlerStoreProxyCommit.nc  MLocksProxy.nc  MLocksSafe.nc  MQueueProxy.nc  MStacksDebug.nc  MSynch.nc  MTypeCheck.nc  MTypeManager.nc  MVirus.nc  MVirusProxy.nc  MateEngine.nc  MateEngineM.nc
tinyos-1.x/contrib/boomerang/tinyos-1.x/tos/lib/VM/contexts/: MergeContext.nc  MergeContextM.nc  OnceContext.cdf  OnceContext.nc  ResolveContext.nc  ResolveContextM.nc  StartContext.cdf  StartContext.nc  Timer0ContextM.nc  context-ids.txt
tinyos-1.x/contrib/boomerang/tinyos-1.x/tos/lib/VM/doc/: mate.css
tinyos-1.x/contrib/boomerang/tinyos-1.x/tos/lib/VM/interfaces/: MateBuffer.nc  MateContextLocks.nc  MateContextStatus.nc  MateEngineControl.nc  MateEngineStatus.nc  MateLocks.nc  MateTypes.nc
tinyos-1.x/contrib/boomerang/tinyos-1.x/tos/lib/VM/languages/: Makefile.am  microscript.ldf
tinyos-1.x/contrib/boomerang/tinyos-1.x/tos/lib/VM/opcodes/: Equality.nc  EqualityM.nc  MateLedsM.nc  OP2pushc10.nc  OP2pushc10M.nc  OPbcast.nc  OPbclear.odf  OPbclearM.nc  OPbfull.nc  OPbfull.odf  OPbfullM.nc  OPbget.nc  OPbgetM.nc  OPbheadM.nc  OPbpush1M.nc  OPbpush3M.nc  OPbreadM.nc  OPbsize.odf  OPbsorta.nc  OPbsortaM.nc  OPbsortdM.nc  OPbufsorta.odf  OPbufsortaM.nc  OPbufsortd.nc  OPbwriteM.nc  OPbyankM.nc  OPcommit.nc  OPcopy.nc  OPcpushM.nc  (+78 more)
tinyos-1.x/tools/src/ncc/: Makefile.in  configure.in
tinyos-1.x/tools/src/ncc/CVS/: Entries  Repository
tinyos-1.x/tos/lib/VM/languages/motlle/standalone/: Makefile.am  alloc.h  bytecodes.h  code.h  compile.c  compile.h  context.c  dump.c  env.h  error.c  error.h  global.c  interpret.c  interpret.h  lexer.l  machine.h  mate_machine.h  mate_machine.inc  mcompile.c  module.c  module.h  motlle.c  mparser.h  mvalues.h  options.h  parser.y  ports.c  scheme.h  scheme.txt  table.c  table.h  tree.h
(+33172 files in other folders)
